Ready for a new snapshot